--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
         <title></title>
     </head>
     <body>
-        <?php
-        // put your code here
-        ?>
+        Cantalas pues.
     </body>
 </html>
