First functional key.

--- a/calculator_backbone_app/index.html
+++ b/calculator_backbone_app/index.html
@@ -55,12 +55,12 @@
 
             <div id="keyboard-right">
 
-                <div id="first-row">
+                <div id="first-row-keyboard">
                     <input id="b_percentage" type="button" value="%" />
                     <input id="b_root" type="button" value="&#8730;" />
                 </div>
 
-                <div id="second-row">
+                <div id="second-row-keyboard">
                     <input id="b_multiply" type="button" value="X" />
                     <input id="b_divide" type="button" value="/" />
                 </div>
