First functional prototype.

--- a/calculator_backbone_app/index.html
+++ b/calculator_backbone_app/index.html
@@ -20,13 +20,9 @@
         <div id="app">
 
             <div id="screen_panel">
-                <input id="screen" type="text" />			
+                <input id="screen" type="text" placeholder="0" readonly />
             </div>
 
-            <!--		789 % raiz-->
-            <!--		456 x /-->
-            <!--		123 + --->
-            <!--		000 + =-->
             <div id="keyboard-left">
 
                 <div id="first-row">
@@ -56,13 +52,13 @@
             <div id="keyboard-right">
 
                 <div id="first-row-keyboard">
-                    <input id="b_percentage" type="button" value="%" />
-                    <input id="b_root" type="button" value="&#8730;" />
+                    <input id="b-percentage" type="button" value="%" />
+                    <input id="b-clear" type="button" value="ce" />
                 </div>
 
                 <div id="second-row-keyboard">
-                    <input id="b_multiply" type="button" value="X" />
-                    <input id="b_divide" type="button" value="/" />
+                    <input id="b-multiply" type="button" value="X" />
+                    <input id="b-divide" type="button" value="/" />
                 </div>
 
                 <div id="plus-div">
@@ -71,8 +67,8 @@
                 </div>
 
                 <div id="equal-div">
-                    <input id="b_minus" type="button" value="-" />
-                    <input id="b_equal" type="button" value="=" />
+                    <input id="b-minus" type="button" value="-" />
+                    <input id="b-equal" type="button" value="=" />
                 </div>
 
             </div>
